compiler/lume_parser/src/snapshots/lume_parser__tests__array_snapshots@multiple.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = [a, b];\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Array(
                Array {
                    values: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        9..10,
                                    ),
                                },
                            },
                        ),
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "b",
                                    location: Location(
                                        12..13,
                                    ),
                                },
                            },
                        ),
                    ],
                    location: Location(
                        8..14,
                    ),
                },
            ),
            location: Location(
                0..15,
            ),
        },
    ),
]
