compiler/lume_parser/src/snapshots/lume_parser__tests__assignment_snapshots@literal_str.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"\\\"foo\\\" = b;\")"
---
SOURCE_FILE@0..10
  EXPR_STMT@0..10
    ASSIGNMENT_EXPR@0..9
      LIT_EXPR@0..5
        STRING_LIT@0..5
          STRING_LIT@0..5 "\"foo\""
      WHITESPACE@5..6 " "
      ASSIGN@6..7 "="
      VARIABLE_EXPR@7..9
        WHITESPACE@7..8 " "
        NAME@8..9
          IDENT@8..9 "b"
    SEMICOLON@9..10 ";"
