compiler/lume_parser/src/snapshots/lume_parser__tests__assignment_snapshots@variable.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"a = b;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    ASSIGNMENT_EXPR@0..5
      VARIABLE_EXPR@0..1
        NAME@0..1
          IDENT@0..1 "a"
      WHITESPACE@1..2 " "
      ASSIGN@2..3 "="
      WHITESPACE@3..4 " "
      VARIABLE_EXPR@4..5
        NAME@4..5
          IDENT@4..5 "b"
    SEMICOLON@5..6 ";"
